// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flight Reducer SearchSuccess Valid action should update the result 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {
        "1": Object {
          "from": "BOM",
          "startAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "startBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "startDate": 2019-11-16T21:54:00.000Z,
          "to": "DEL",
          "travelOrder": 1,
        },
        "2": Object {
          "from": "GOI",
          "startAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "startBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "startDate": 2018-12-16T21:54:00.000Z,
          "to": "BOM",
          "travelOrder": 2,
        },
      },
      "ids": Array [
        1,
        2,
      ],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [
      Object {
        "airline": "indigo",
        "arrivalTime": Object {
          "hours": 16,
          "minutes": 19,
        },
        "code": "6E-123",
        "cost": 1,
        "duration": Object {
          "hours": 7,
          "minutes": 10,
        },
        "from": "BOM",
        "startDate": 2019-11-16T21:54:00.000Z,
        "startTime": Object {
          "hours": 9,
          "minutes": 20,
        },
        "to": "DEL",
        "travelOrder": 1,
      },
    ],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer Unknown action should return the initial state 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {},
      "ids": Array [],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer Unknown action should return the initial state for undefined initial state input 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {},
      "ids": Array [],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer UpdateFlightSearchDetails Valid action should return the added FlightSearchDetailsState 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {
        "1": Object {
          "from": "BOM",
          "startAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "startBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "startDate": 2018-12-16T21:54:00.000Z,
          "to": "GOI",
          "travelOrder": 1,
        },
      },
      "ids": Array [
        1,
      ],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer UpdateFlightSearchDetails Valid action should return the added FlightSearchDetailsState 2`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {
        "1": Object {
          "from": "BOM",
          "startAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "startBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "startDate": 2019-11-16T21:54:00.000Z,
          "to": "DEL",
          "travelOrder": 1,
        },
        "2": Object {
          "from": "GOI",
          "startAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "startBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "startDate": 2018-12-16T21:54:00.000Z,
          "to": "BOM",
          "travelOrder": 2,
        },
      },
      "ids": Array [
        1,
        2,
      ],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer UpdateFlightSearchDetails Valid action should return the updated FlightSearchDetailsState 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {
        "1": Object {
          "from": "BOM",
          "startAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "startBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "startDate": 2019-11-16T21:54:00.000Z,
          "to": "DEL",
          "travelOrder": 1,
        },
      },
      "ids": Array [
        1,
      ],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;
